--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,15 +1,15 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="/" class="navbar-wagon-brand">
+  <a href="index.html" class="navbar-wagon-brand">
     <img src="images/logo.png" alt="logo">
   </a>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
 
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Host</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Trips</a>
-    <a href="" class="navbar-wagon-item navbar-wagon-link">Messages</a>
+    <a href="about.html" class="navbar-wagon-item navbar-wagon-link">Host</a>
+    <a href="index.html" class="navbar-wagon-item navbar-wagon-link">Trips</a>
+    <a href="#" class="navbar-wagon-item navbar-wagon-link">Messages</a>
     <%= link_to "Meet the team", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Profile picture with dropdown list -->
