Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -5,6 +5,12 @@ $red: #EE5F5B;
 $blue: #469AE0;
 $yellow: #FDB631;
 $orange: #E67E22;
+$red-orange: #da552f;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$mid-gray: #E6E6E6;
+$more-gray: #999999;
+$dark-gray: #616668;
+$white: #ffffff;
+$bright-red: #D23333;
