--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -37,31 +37,31 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $dark-gray;
   font-size: 14px;
-}
-.navbar-wagon-link:hover {
-  color: #da552f;
+  &:hover {
+  color: $red-orange;
   text-decoration: none;
+  }
 }
 
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
-}
-.navbar-wagon-dropdown-menu li > a {
+  box-shadow: 1px 1px 4px $mid-gray;
+  border-color: $mid-gray;
+  li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: $more-gray !important;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
-}
-.navbar-wagon-dropdown-menu li > a:hover {
-  background: transparent !important;
-  color: black !important;
+    &:hover {
+    background: transparent !important;
+    color: black !important;
+    }
+  }
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
@@ -72,6 +72,6 @@
   top: -6px;
   background-color: white;
   transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
+  border-left: 1px solid $mid-gray;
+  border-top: 1px solid $mid-gray;
 }
