made template for different apartments

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,20 +3,24 @@ title: Le Wagon - Middleman
 ---
 <%= partial "layouts/banner" %>
 
-<div class="container">
-  <div class="row">
-    <% %w(shanghai berlin london paris melbourne barcelona).each do |city| %>
-      <div class="col-xs-12 col-sm-4">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(https://kitt.lewagon.com/placeholder/cities/<%= city %>)" class="img-rounded" height="100px">
-          <div class="card-category">Popular</div>
-          <div class="card-description">
-            <h2>Le Wagon <%= city.capitalize %></h2>
-            <p>Very cool city, the best</p>
+<div class="container" id="home-flats">
+  <h2 class="text-center">Recent flats</h2>
+    <div class="row">
+      <% data.flats.each do |owner, flat| %>
+        <div class="col-xs-12 col-sm-6 col-md-4">
+          <div class="card" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%), url('https://kitt.lewagon.com/placeholder/cities/<%= flat.city_slug %>');">
+            <div class="card-category"><%= flat.city_name %></div>
+            <div class="card-description">
+              <h2><%= flat.name %></h2>
+              <p><%= flat.description %></p>
+            </div>
+            <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{owner}", class:"card-user" %>
+            <%= link_to "", "flats/#{owner}.html", class: "card-link" %>
           </div>
-          <img src="https://kitt.lewagon.com/placeholder/users/papillard" alt="user" class="card-user">
-          <a href="#" class="card-link"></a>
         </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
 </div>
+
+
+
