--- a/source/layouts/_navbar.html.erb
+++ b/source/layouts/_navbar.html.erb
@@ -1,8 +1,6 @@
 <div class="navbar-wagon">
   <!-- Logo -->
-  <a href="index.html" class="navbar-wagon-brand">
-    <img src="images/logo.png" alt="logo">
-  </a>
+  <%= link_to image_tag("/images/logo.png"), "/index.html", class: "navbar-wagon-brand" %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
@@ -10,7 +8,7 @@
     <a href="about.html" class="navbar-wagon-item navbar-wagon-link">Host</a>
     <a href="index.html" class="navbar-wagon-item navbar-wagon-link">Trips</a>
     <a href="#" class="navbar-wagon-item navbar-wagon-link">Messages</a>
-    <%= link_to "Meet the team", "team.html", class: "navbar-wagon-item navbar-wagon-link" %>
+    <%= link_to "Meet the team", "/team.html", class: "navbar-wagon-item navbar-wagon-link" %>
 
     <!-- Profile picture with dropdown list -->
     <div class="navbar-wagon-item">
